<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.TutorRegistrationActivity"
        style="@style/editScreenStyles">

        <LinearLayout
            android:id="@+id/formdata"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


            <!--<LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/setprofpic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="left"
                    android:src="@drawable/profilepic"/>

            </LinearLayout>-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp" >

                <com.dal.group7.tutorplus.ui.adapters.RoundedImageView
                    android:id="@+id/ivImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:text="@string/Name"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    style="@style/editTxtFieldLabel"/>

                <EditText
                    android:id="@+id/name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:maxLength="50"
                    android:hint="@string/Name"
                    style="@style/EditableTextFieldStyle"
                    android:maxLines="1"
                    android:padding="10dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    style="@style/editTxtFieldLabel"
                    android:text="@string/Age"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/age"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditableTextFieldStyle"
                    android:layout_margin="5dip"
                    android:hint="@string/Age"
                    android:inputType="phone"
                    android:maxLength="13"
                    android:padding="10dip" />
            </LinearLayout>

            <!--<LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:ems="5"
                    android:text="@string/Email"
                    />

                <EditText
                    android:id="@+id/Email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:background="@android:drawable/editbox_background_normal"
                    android:inputType="textEmailAddress"
                    android:padding="10dip" />
            </LinearLayout>-->


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    style="@style/editTxtFieldLabel"
                    android:text="@string/Phone"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditableTextFieldStyle"
                    android:layout_margin="5dip"
                    android:inputType="phone"
                    android:hint="+1-XXX-XXX-XXXX"
                    android:padding="10dip" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    style="@style/editTxtFieldLabel"
                    android:text="@string/Category"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <!--  <EditText
                      android:id="@+id/category"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      style="@style/EditableTextFieldStyle"
                      android:layout_margin="5dip"
                      android:hint="@string/Category"
                      android:padding="10dip" />-->
                <Spinner
                    android:id="@+id/spinCategory"
                    android:verticalScrollbarPosition="left"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:padding="10dip"
                    android:layout_marginTop="5dp"
                    android:dropDownHeight="100dp"
                    android:popupBackground="@android:color/white"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    style="@style/editTxtFieldLabel"
                    android:text="@string/Location"
                    android:textSize="15dp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/locshowtv"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditableTextFieldStyle"
                    android:editable="false"
                    android:layout_margin="5dip"
                    android:padding="10dip"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    style="@style/editTxtFieldLabel"
                    android:text="@string/Level"
                    android:textSize="15dp"
                    android:textStyle="bold"/>

                <!--<EditText
                    android:id="@+id/level"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    style="@style/EditableTextFieldStyle"
                    android:maxLength="50"
                    android:hint="@string/Level"
                    android:maxLines="1"
                    android:padding="10dip" />-->
                <Spinner
                    android:id="@+id/spinLevel"
                    android:verticalScrollbarPosition="left"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:padding="10dip"
                    android:layout_marginTop="5dp"
                    android:dropDownHeight="100dp"
                    android:popupBackground="@android:color/white"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    style="@style/editTxtFieldLabel"
                    android:text="@string/Qualification"
                    android:textSize="15dp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/qualification"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:maxLength="50"
                    style="@style/EditableTextFieldStyle"
                    android:hint="For Eg. PhD in Thermodynamics"
                    android:maxLines="1"
                    android:padding="10dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    style="@style/editTxtFieldLabel"
                    android:text="@string/PriceperSession"
                    android:textSize="15dp"
                    android:textStyle="bold"/>

                <!--<EditText
                    android:id="@+id/priceperSession"
                    android:layout_width="fill_parent"
                    style="@style/EditableTextFieldStyle"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:hint="@string/PriceperSession"
                    android:padding="10dip" />-->

                <Spinner
                    android:id="@+id/spinPricePerSession"
                    android:verticalScrollbarPosition="left"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:padding="10dip"
                    android:layout_marginTop="5dp"
                    android:dropDownHeight="100dp"
                    android:popupBackground="@android:color/white"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    style="@style/editTxtFieldLabel"
                    android:text="@string/TutorExperience"
                    android:textSize="15dp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/tutorExperience"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditableTextFieldStyle"
                    android:layout_margin="5dip"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:hint="Enter experience in years"
                    android:inputType="phone"
                    android:padding="10dip" />
            </LinearLayout>


            <Button
                android:id="@+id/next_tutor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Submit Profile"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:onClick="onSubmitClick"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_horizontal"
                android:elevation="5dp"
                android:layout_marginBottom="2dp"/>

            <!--<Button
                android:id="@+id/cancel_tutor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:text="Cancel"
                android:layout_weight="1" />-->



        </LinearLayout>

    </RelativeLayout>

</ScrollView>